# avird_2026

./: .env.example  .gitignore  CLAUDE.md  README.md
.claude/: settings.json
.claude/commands/: ship.md  verify-local.md  verify-page.md  verify-site.md
.claude/hooks/: format_on_edit.py  mark_web_pending.py  verify_gate.py
apps/api/: .env.example  CLAUDE.md  Procfile  README.md  pyproject.toml  requirements.txt
apps/api/app/: data.py  db.py  debate.py  fault.py  groupings.py  incidents.py  main.py  severity.py
apps/api/app/derived/: __init__.py  agent.py  aggregate.py  budget.py  filters.py  routes.py
apps/api/app/kgquery/: __init__.py  agent.py  budget.py  cli.py  graph_card.py  routes.py  validate.py
apps/api/app/nlsql/: __init__.py  agent.py  budget.py  cli.py  routes.py  schema_card.py  validate.py
apps/api/app/rag/: __init__.py  agent.py  budget.py  cli.py  context.py  ingest.py  routes.py  store.py
apps/api/tests/: test_debate.py  test_derived_agent.py  test_derived_aggregate.py  test_derived_budget.py  test_derived_filters.py  test_derived_routes.py  test_fault.py  test_groupings.py  test_health.py  test_incidents.py  test_kgquery_agent.py  test_kgquery_cli.py  test_kgquery_graph_card.py  test_kgquery_routes.py  test_kgquery_validate.py  test_nlsql_agent.py  test_nlsql_budget.py  test_nlsql_cli.py  test_nlsql_routes.py  test_nlsql_schema_card.py  test_nlsql_validate.py  test_rag_agent.py  test_rag_context.py  test_rag_routes.py  test_rag_store.py  test_requirements_sync.py  test_severity.py
apps/web/: .env.example  CLAUDE.md  README.md  package-lock.json  package.json
data/nhtsa/: SGO-2021-01_Incident_Reports_ADS_2025_06_16_to_2026_03_16.csv
db/: RAILWAY_SETUP.md  README.md  __init__.py  build_treated.py  connection.py  create_tables.py  ingest_raw.py  manifest.py  pgvector_setup.sql  run_pipeline.py
db/roles/: readonly_role.sql
db/sql/: 001_raw_incident_reports.sql  002_ingest_batches.sql  003_treated_incident_reports.sql  004_raw_latest_view.sql  005_fault_analysis.sql  099_drop_all.sql
db/tests/: conftest.py  test_build_treated.py  test_create_tables.py  test_ingest_raw.py  test_manifest.py  test_run_pipeline.py
docs/avird-sgo-database-data-dictionary/: cleaning_manifest.json  column_dictionary.json
docs/brainstorms/: 2026-06-05-website-mvp-requirements.md  nhtsa-crash-portfolio-requirements.md  nhtsa-crash-project-requirements.md
docs/code-reviews/: 2026-05-17-001-embeddings-track-review.md
docs/conventions/: stack.md  workflow.md
docs/human_notes/: db_init_status.md
docs/ideas/: backlog-ideas.md  post-mvp-ideas.md  website-ideas.md
docs/plans/: 2026-04-28-001-feat-phase-0-scaffold-plan.md  2026-05-17-001-feat-narrative-embeddings-unsupervised-plan.md  2026-05-20-001-feat-spacy-narrative-eda-plan.md  2026-05-22-001-feat-injury-target-analysis-plan.md  2026-05-26-001-feat-postgres-data-ingest-treatment-plan.md  2026-05-31-001-feat-eda-phase-closeout-plan.md  2026-06-05-001-feat-website-mvp-w1-w2-plan.md  2026-06-09-001-feat-local-verification-pipeline-plan.md  2026-06-11-001-feat-ontology-pipeline-plan.md  2026-06-22-001-feat-website-mvp-w5-derived-views-nl-query-plan.md  2026-06-25-001-feat-fault-judge-and-debate-plan.md  2026-06-30-001-feat-agentic-data-access-progression-plan.md
docs/reviews/: 2026-05-25-code-review-injury-target.md
docs/solutions/: README.md
docs/writeups/: README.md  kg-queries-nl-to-cypher.md  local-verification-pipeline.md  p0-scaffold.md  rag-over-narratives.md  text-to-sql-open-ended.md  w1-w2-incident-browser-groupings.md
eda/: CLAUDE.MD  build_narrative_embeddings.py  eda_utils_basic.py  eda_utils_bertopic.py  eda_utils_co_impact.py  eda_utils_dedupe.py  eda_utils_emb_cluster.py  eda_utils_embed.py  eda_utils_harmonize.py  eda_utils_keybert.py  eda_utils_neighbors.py  eda_utils_nlp.py  eda_utils_sgo.py  eda_utils_spacy.py  eda_utils_target_interactions.py  eda_utils_target_models.py  eda_utils_target_univariate.py  eda_utils_targets.py  eda_utils_topics.py  eda_utils_treatment.py  eda_utils_x.py
fault/: CLAUDE.md  format.py  graph.py  judge_batch.py
ontology/: CLAUDE.md  corpus.py  discover.py  evaluate.py  export_web_graph.py  extract.py  golden.py  graph_load.py  llm.py  prune.py  run_pipeline.py  run_records.py  schema_model.py  seed_schema.py
tools/: dev_stack.py  eval_kgquery.py  eval_nlsql.py  eval_rag.py  local_db_setup.py  pyproject.toml  setup_readonly_role.py  verify_evidence.py  verify_site.py
tools/results/: kgquery-eval-dev.json  kgquery-eval-dev.md
tools/tests/: test_dev_stack.py  test_eval_kgquery.py  test_eval_nlsql.py  test_eval_rag.py  test_hooks.py  test_setup_readonly_role.py  test_verify_evidence.py  test_verify_site.py
(+157 files in other folders)
