[project]
name = "avird-api"
version = "0.0.0"
description = "FastAPI service for avird-2026 (NHTSA AV crash data)"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115",
    "asyncpg>=0.29",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.6",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI dependency-injection markers are immutable by design — allow them as
# argument defaults (the standard FastAPI idiom) regardless of annotated type.
extend-immutable-calls = ["fastapi.Depends"]
