[project]
name = "avird-api"
version = "0.0.0"
description = "FastAPI service for avird-2026 (NHTSA AV crash data)"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115",
    "asyncpg>=0.29",
    # Runtime LLM deps (new for the api service, previously key-free), kept in
    # sync with requirements.txt:
    #   - Live debate pipeline (Feature 2) -> langchain-anthropic
    #   - W5 NL-query agent (POST /derived/query, KTD 5) -> anthropic SDK direct
    # The default heatmap render stays dependency-light and LLM-free (KTD 4).
    "langgraph>=0.2",
    "langchain-anthropic>=0.3",
    "anthropic>=0.40",
    # P1 text-to-SQL validator: parse + read-only-shape + allow-list checks on
    # model-authored SQL, no execution (app/nlsql/validate.py). Pure-Python.
    "sqlglot>=25",
    # P2 narrative-RAG route (POST /rag/ask): numpy for the retrieval store's
    # vendored cosine path (app/rag/store.py), huggingface_hub for the query
    # embedding at request time (app/rag/agent.py, lazy — needs HF_TOKEN).
    # The heavy ingest deps (pandas/pyarrow) stay offline-only, never api deps.
    "numpy>=1.26",
    "huggingface_hub>=0.24",
    # P3 NL->Cypher route (POST /kgquery/ask): pyyaml renders the frozen
    # ontology schema into the graph card (app/kgquery/graph_card.py, never
    # imports ontology modules); neo4j executes validated read-mode Cypher
    # (app/kgquery/agent.py, lazy — needs NEO4J_* at call time).
    "pyyaml>=6.0",
    "neo4j>=5.20",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.6",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI dependency-injection markers are immutable by design — allow them as
# argument defaults (the standard FastAPI idiom) regardless of annotated type.
extend-immutable-calls = ["fastapi.Depends"]
